regression/fail/exp.1.sml
val _ = {x = 13, x = 14}
